# shapely-ext

./: .gitignore  404.html  Makefile  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: full_test.yml
docs/: getting_started.md  reference.md
getting_started/: index.html
notebooks/: test.ipynb
reference/: index.html
shapely_ext/: __init__.py  accessor.py  tools.py
shapely_geo/: __init__.py  accessor.py  geo_tools.py
