[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# location of package relative to the repository root (e.g. alternatively "src/shapely_geo")
# note: the package name 'shapely_geo' can be different from the project name on PyPI
#       the project name (PyPI) is used for pip install, whereas the package name is used for imports
packages = ["shapely_geo"]  

[tool.hatch.build.targets.sdist]
exclude = ["notebooks", "tests", "images"]

[project]
# name on PyPI (e.g. pip install shapely_geo)
name = "shapely_geo"
version = "0.0.1"
dependencies = [
    "numpy",
    "shapely"
]

authors = [
  { name="First Last", email="initials@dhigroup.com" },
]
description = "Useful library"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Development Status :: 2 - Pre-Alpha",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
]

[project.optional-dependencies]
dev = [
  "build",
  "pytest",
  "ruff",
  "mypy",
  "mkdocs",
  "mkdocstrings[python]", 
  "mkdocs-material"
]

test= [
  "pytest",
  "pytest-cov",
  "mypy",
]

notebooks = [
  "jupyter",
]

[project.urls]
"Homepage" = "https://github.com/DHI/shapely_geo"
"Bug Tracker" = "https://github.com/DHI/shapely_geo/issues"


[tool.ruff]
# ignore long lines
lint.ignore = ["E501"]

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true
warn_unreachable = false
no_implicit_optional = true
